Removed unused dependency and use undeprecated API